fix(css): align link with underline correctly

--- a/src/components/common/link/link.module.scss
+++ b/src/components/common/link/link.module.scss
@@ -15,6 +15,7 @@
   background-position: 0 0.9em;
   background-repeat: repeat-x;
   padding-bottom: 0.1em;
+  margin-top: 0.1em;
   background-size: 0.4em 0.15em;
 }
 
